crates/strider/tests/snapshots/v3__mips32le__complex__bit_test_zero.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x4007e8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x2a:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v11" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v11" [color="#888888", style=dashed];
  "v11" -> "9" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v12" [color="#888888", style=dashed];
  "v12" -> "9" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "16" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "20" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x4007e0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "24" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "26" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "24" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "24" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x11:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v28" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v28" [color="#888888", style=dashed];
  "v28" -> "26" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v29" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v29" [color="#888888", style=dashed];
  "v29" -> "26" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v30" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v30" [color="#888888", style=dashed];
  "v30" -> "26" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
}
